// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toHaveBeenCalledAfter failIfNoFirstInvocation is passed as false failed when given first mock has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[19]</color>
Received second mock with invocationCallOrder:
  <red>[18]</color>"
`;

exports[`.not.toHaveBeenCalledAfter fails when given first mock is called after several calls to second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to not have been called after, invocationCallOrder:
  <green>[26, 27, 28]</color>
Received second mock with invocationCallOrder:
  <red>[25]</color>"
`;

exports[`.toHaveBeenCalledAfter failIfNoFirstInvocation is passed as true failed when given first mock has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called after, invocationCallOrder:
  <green>[]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called after, invocationCallOrder:
  <green>[]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock is called before multiple calls to second mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called after, invocationCallOrder:
  <green>[6, 8]</color>
Received second mock with invocationCallOrder:
  <red>[7, 9, 10]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given first mock that has been called and a second mock that has not been called 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called after, invocationCallOrder:
  <green>[1]</color>
Received second mock with invocationCallOrder:
  <red>[]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given first value is not a jest spy or mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Matcher error: <red>"received"</color> must be a mock or spy function

Received has type:  function
Received has value: <red>[Function mock1]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given second mock is called after first mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Expected first mock to have been called after, invocationCallOrder:
  <green>[4000]</color>
Received second mock with invocationCallOrder:
  <red>[5000]</color>"
`;

exports[`.toHaveBeenCalledAfter fails when given second value is not a jest spy or mock 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toHaveBeenCalledAfter(</intensity><green>expected</color><dim>)</intensity>

Matcher error: <green>"expected"</color> must be a mock or spy function

Expected has type:  function
Expected has value: <green>[Function mock2]</color>"
`;
